styles/widgets/_unifiedSearch.scss
@use "../mixin/icons" as *;
@use "../theme/theme";

$searchButtonWidth: 16px;
$searchButtonPadding: 8px;
$searchButtonTotal: $searchButtonWidth + $searchButtonPadding * 2;

.reactodia-unified-search {
  border: theme.$input-border-width solid theme.$input-border-color;
  border-radius: theme.$input-border-radius;
  background-color: theme.$background-color-surface;
  transition: border-color ease-in-out 0.15s;

  &:focus-within {
    border-color: theme.$input-border-color-focus;
  }

  &.reactodia-dropdown--expanded {
    box-shadow: theme.$canvas-box-shadow;
  }

  &__toggle {
    height: 28px;
    display: flex;
    align-items: stretch;

    /* Match outer border radius */
    border: theme.$input-border-width solid transparent;
    border-radius: theme.$input-border-radius;
  }

  .reactodia-dropdown__content {
    border-bottom-left-radius: theme.$input-border-radius;
    border-bottom-right-radius: theme.$input-border-radius;
  }

  &__search-input {
    flex: auto;

    display: block;
    margin: 0;
    padding: 6px #{12px + $searchButtonTotal} 6px 12px;
    color: theme.$input-color;
    background-color: theme.$background-color-surface;
    border: none;

    &::placeholder {
      color: theme.$input-color-placeholder;
    }

    &:focus {
      outline: 0;
    }
  }

  &__search-icon {
    position: absolute;
    right: 0;
    padding: 0 $searchButtonPadding;
    align-self: center;
  
    border: none;
    background: none;
    cursor: text;

    &::before {
      @include codicon("search");
    }
  }

  &__collapse-button,
  &__clear-button {
    position: absolute;
    right: 0;
    padding: 6px;
    align-self: center;
  
    color: theme.$button-default-color;
    background: 0 0;
    border: 0;
    border-radius: theme.$input-border-radius;
    transition: background-color theme.$transition-duration;

    &:hover {
      color: theme.$button-default-color-focus;
      background-color: theme.$button-default-background-color-focus;
    }
  }

  .reactodia-dropdown--down &__collapse-button,
  .reactodia-dropdown--down &__clear-button {
    border-top-left-radius: unset;
  }

  .reactodia-dropdown--down.reactodia-dropdown--expanded &__collapse-button,
  .reactodia-dropdown--down.reactodia-dropdown--expanded &__clear-button {
    border-bottom-right-radius: unset;
  }

  .reactodia-dropdown--up &__collapse-button,
  .reactodia-dropdown--up &__clear-button {
    border-bottom-left-radius: unset;
  }

  .reactodia-dropdown--up.reactodia-dropdown--expanded &__collapse-button,
  .reactodia-dropdown--up.reactodia-dropdown--expanded &__clear-button {
    border-top-right-radius: unset;
  }

  .reactodia-dropdown--down &__collapse-button::after {
    @include codicon("chevron-up");
  }

  .reactodia-dropdown--up &__collapse-button::after {
    @include codicon("chevron-down");
  }

  &__clear-button::after {
    @include codicon("close");
  }

  & .reactodia-dropdown__content {
    position: unset;
    box-shadow: unset;
  }

  &__panel {
    display: flex;
    flex-direction: column;
  }

  &__section-tabs {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    margin: 8px 10px;
  }

  &__section-tab {
    padding: 4px;
    font-size: 13px;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    user-select: none;

    border-width: theme.$button-border-width;
    border-style: solid;

    transition: background-color theme.$transition-duration;
  }

  &__section {
    flex: auto;
    display: flex;
    flex-direction: column;
  }

  &__section:not(&__section--active) {
    display: none;
  }
}

